--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,34 @@ body {
 a {
   color: #00B7FF;
 }
+
+#first-container {
+  width: 50vw;
+  height: 10vh;
+  /* margin: 0 auto; */
+  font-size: 1.5em;
+  float:left;
+  
+}
+.menu {  
+  height: 10vh;
+  float: right;
+  width: 30vw;
+  margin: 0;
+  
+}
+.menu ul {  
+  list-style: none;
+}
+#logout {
+  float: right;
+  width:20vw;
+  height:5vh;
+  right: -20%;
+  margin-right: 20vw;
+  border: 1px solid;
+  text-align: center;
+}
+#second-container {
+
+}
