--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
             </li>            
         </ul>
     </nav>
-    <div id="logout">logout</div>
+    <button id="logout" type="submit" onclick="">logout</button>
     <div id="second-container">
         <p>Dashboard</p>
         <p>You are logged in</p>
