--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,10 +2,10 @@
 <div id="big-container">
     <div id="login-first-container"><%= title %></div>
     <div id="login-second-container">
-        <form action="#" method="post">
+        <form action="/" method="post">
             <p>name<input type="text" name="name"></p>
             <p>Password<input type="text" name="password"></p>
-            <p>Password（確認）<input type="text" name="passwordComfirm"></p>
+            <p>Password（確認）<input type="text" name="passwordConfirmation"></p>
             <button name="login">Login</button>
             <a href="#">Forget Your Password?</a>
         </form>
